--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "preview": "vite preview",
     "electron": "electron .",
     "eleMain": "webpack",
-    "starts": "concurrently \"wait-on http://localhost:3000/ && electron .\" \"cross-env BROWSER=none npm run dev\"",
-    "builds": "concurrently \"electron .\"\"vite\"",
+    "start": "concurrently \"electron .\" \"vite\"",
     "dist": "electron-builder",
     "predist": "npm run eleMain",
     "preeleMain": "npm run build",
